other-cel/exclude-namespaces-dynamically/.chainsaw-test/cm.yaml
apiVersion: v1
data:
  exclude: "exclude-ns, exclude-ns-2"
kind: ConfigMap
metadata:
  name: namespace-filters
  namespace: default
