other-cel/exclude-namespaces-dynamically/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exclude-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: exclude-ns-2
